--- a/MyTodo.html
+++ b/MyTodo.html
@@ -13,7 +13,7 @@
         <input type="text" id="inpdata" placeholder="Enter Task" /><br><br>
         <button type="submit" onclick="listsection()">Add</button>
         <h2>Current Tasks</h2>
-        <li id="list" oninput="lists()">None</li><br><br>
+        <div id="list" onclick="lists()">None</div><br><br>
         <button type="submit" onclick="resets()">Reset</button>
     </form>
     <script src="./MyTodo.js"></script>
